--- a/components/about/about.module.scss
+++ b/components/about/about.module.scss
@@ -23,6 +23,7 @@
   .about {
     .content {
       flex-direction: column;
+      gap: 2rem;
     }
   }
 }
