--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -51,3 +51,9 @@
     }
   }
 }
+
+@media (hover: none) {
+  .footer .arrow:hover {
+    transform: none;
+  }
+}
