--- a/components/layout/header/mobile-nav.module.scss
+++ b/components/layout/header/mobile-nav.module.scss
@@ -18,7 +18,8 @@
     height: auto;
     width: 100%;
     padding: 0;
-    margin: 20% auto;
+    margin: 0 auto;
+    margin-top: 6rem;
 
     li {
       margin: 0.75rem 0;
