--- a/components/layout/navigation.module.scss
+++ b/components/layout/navigation.module.scss
@@ -72,3 +72,14 @@
     align-items: center;
   }
 }
+
+@media (hover: none) {
+  .navigation {
+    li a:hover {
+      color: inherit;
+    }
+    .cv a:hover {
+      color: $color-primary-light;
+    }
+  }
+}
