--- a/components/projects/project-card.module.scss
+++ b/components/projects/project-card.module.scss
@@ -126,5 +126,10 @@
         margin: 0;
       }
     }
+
+    a:active,
+    a:hover {
+      transform: none;
+    }
   }
 }
